--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ dist: trusty
 script:
  - dotnet restore
  - dotnet build
- - cd CORESubscriber/CORESubscriber
  - dotnet publish -c Release --self-contained -r win10-x64
- - tar -czvf win64.tar.gz bin\Release\netcoreapp2.1\win10-x64\publish\
+ - tar -czvf win64.tar.gz CORESubscriber/bin/Release/netcoreapp2.1/win10-x64/publish/
  - dotnet publish -c Release --self-contained -r ubuntu-x64
- - tar -czvf ubuntu64.tar.gz bin\Release\netcoreapp2.1\ubuntu-x64\publish\
+ - tar -czvf ubuntu64.tar.gz CORESubscriber/bin/Release/netcoreapp2.1/ubuntu-x64/publish/
