--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,19 @@ script:
  - dotnet restore
  - dotnet build
  - dotnet publish -c Release --self-contained -r win10-x64
- - tar -czvf win64.tar.gz CORESubscriber/bin/Release/netcoreapp2.1/win10-x64/publish/
  - dotnet publish -c Release --self-contained -r ubuntu-x64
+before_deploy:
+ - git tag "$(date +'%Y%m%d-%H%M%S')-$(git log --format=%h -1)"
+ - cd build
  - tar -czvf ubuntu64.tar.gz CORESubscriber/bin/Release/netcoreapp2.1/ubuntu-x64/publish/
+ - tar -czvf win64.tar.gz CORESubscriber/bin/Release/netcoreapp2.1/win10-x64/publish/
+deploy:
+  provider: releases
+  api_key: $GITHUB_TOKEN
+  file_glob: true
+  file:
+   - ubuntu64.tar.gz 
+   - win64.tar.gz
+  skip_cleanup: true
+  on:
+    branch: master
